# whatcable-linux

./: .gitignore  README.md  flake.nix  meson.build
.github/workflows/: flatpak.yml
build-aux/: com.nedrichards.WhatCable.json
build-aux/stable/: com.nedrichards.WhatCable.json
data/: com.nedrichards.WhatCable.desktop  com.nedrichards.WhatCable.metainfo.xml  style.css
docs/: framework-13-usb-c-investigation.md
src/: whatcable-linux.in
src/whatcable_linux/: advanced_sources.py  app.py  cli.py  models.py  naming.py  pd.py  report.py  summary.py  sysfs.py  usb_sysfs.py
tests/: test_advanced_sources.py  test_pd.py  test_sysfs.py  test_usb_sysfs.py
